--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
   <meta name="viewport" content="width=device-width">
   <title></title>
   <link rel="stylesheet" href="styles/layout.css">
+  <script src="jquery-3.3.1.min.js"></script>
+  <script src="menu.js"></script>
 </head>
 <body>
   <header>
-
+    <div class="logo">
+    </div>
+    <button class="hamburger">&#9776;</button>
+    <button class="cross">&#735;</button>
   </header>
   <main>
+    <div class="menu">
+      <ul>
+        <a href="#"><li>ОСНОВНОЕ</li></a>
+        <a href="#"><li>ЛУЧШЕЕ</li></a>
+        <a href="#"><li>О ЧЕЛОВЕКЕ</li></a>
+        <a href="#"><li>ХОЧУ БОЛЬШЕ</li></a>
+      </ul>
+    </div>
     <section class="about">
 
     </section>
@@ -28,7 +41,16 @@
     </section>
   </main>
   <footer>
-
+    <div class="footer">
+      <a href="footer__bio">1</a>
+      <a href="footer__bio">2</a>
+      <a href="footer__bio">3</a>
+      <a href="footer__bio">4</a>
+      <a href="footer__bio">5</a>
+      <a href="footer__bio">6</a>
+    </div>
   </footer>
+
+
 </body>
 </html>
