--- a/index.html
+++ b/index.html
@@ -25,7 +25,24 @@
       </ul>
     </div>
     <section class="about">
-
+      <div class="first-screen">
+        <div class="first-screen__image">
+        <p class="first-screen__letter">ц</p>
+        <h1>Циолковский−
+            Космический
+            гений
+        </h1>
+        </div>
+      </div>
+      <p class="about__right-line">01</p>
+      <div class="right-line"></div>
+      <h2 class="about__heading">Кто же он?</h2>
+      <p class="asterisk">*</p>
+      <p class="about__text">17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже. </p>
+      <div class="about__images">
+        <div class="about__image1"></div>
+        <div class="about__image2"></div>
+      </div>
     </section>
     <section class="distinction">
 
