--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
-          <p>Король мира</p>
+          <p>Король мира (может быть, нескольких)</p>
         </a>
     </div>
     <p>made by #HSEADCGANG</p>
