Сделала первый блок
вроде норм

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="first-screen">
         <div class="first-screen__image">
         <p class="first-screen__letter">ц</p>
-        <h1>Циолковский−
+        <h1 class="first-screen__heading">Циолковский−
             Космический
             гений
         </h1>
