чутка порядок навел и лого завез

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="logo">
     </div>
-    <button class="hamburger">&#9776;</button>
+    <button class="menu__button">&#9776;</button>
     <button class="cross">&#735;</button>
   </header>
   <main>
