поменял названия всякие

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     </div>
     <button class="menu__button">&#9776;</button>
     <button class="cross">&#735;</button>
+    <div class="menu__classic">
+      <a href="#"><li>ОСНОВНОЕ</li></a>
+      <a href="#"><li>ЛУЧШЕЕ</li></a>
+      <a href="#"><li>О ЧЕЛОВЕКЕ</li></a>
+      <a href="#"><li>ХОЧУ БОЛЬШЕ</li></a>
+    </div>
   </header>
   <main>
-    <div class="menu">
+    <div class="menu__hamburger">
       <ul>
         <a href="#"><li>ОСНОВНОЕ</li></a>
         <a href="#"><li>ЛУЧШЕЕ</li></a>
