--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         </h1>
         </div>
       </div>
-      <p class="about__right-line">01</p>
-      <div class="right-line"></div>
+      <div class="right-line">
+        <p class="number">01</p>
+      </div>
       <h2 class="about__heading">Кто же он?</h2>
-      <p class="asterisk">*</p>
-      <p class="about__text">17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже. </p>
+      <h3 class="asterisk">*</h3>
+      <h4 class="about__text">17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже. </h4>
       <div class="about__images">
         <div class="about__image1"></div>
         <div class="about__image2"></div>
