неудачная попытка в сетку

--- a/index.html
+++ b/index.html
@@ -70,36 +70,36 @@
         <p>#HSEADCGANG</p>
       </div>
       <div class="footer__section">
-        <a href="#" class="footer__bio">
+        <a href="#" class="footer__bio1">
           <div class="footer__bio__pic"></div>
           <p>Денис</p>
           <p>Любит ходить к твоей  маме</p>
         </a>
-        <a href="#" class="footer__bio">
+        <a href="#" class="footer__bio2">
           <div class="footer__bio__pic"></div>
           <p>Аня</p>
           <p>Раз, раз, раз — это хардбасс</p>
         </a>
       </div>
       <div class="footer__section">
-        <a href="#" class="footer__bio">
+        <a href="#" class="footer__bio3">
           <div class="footer__bio__pic"></div>
           <p>Валерос</p>
           <p>Спотыкается на ровном месте</p>
         </a>
-        <a href="#" class="footer__bio">
+        <a href="#" class="footer__bio4">
           <div class="footer__bio__pic"></div>
           <p>Катя</p>
           <p>Что-нибудь еще клевое придумайте</p>
         </a>
       </div>
       <div class="footer__section">
-        <a href="#" class="footer__bio">
+        <a href="#" class="footer__bio5">
           <div class="footer__bio__pic"></div>
           <p>Яна</p>
           <p>Разъебёт всех, если надо</p>
         </a>
-        <a href="#" class="footer__bio">
+        <a href="#" class="footer__bio6">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
           <p>Король мира (может быть, нескольких)</p>
