Revert "Merge branch 'master' of https://github.com/RockinDesigner/hse-responsive-article"
This reverts commit 01e7e8472362889c7d905811f7110285c1170b8c, reversing
changes made to e9a4821e78d7c47bdd679e72b8820c26b55e2e1f.

--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
       <div class="first-screen">
         <div class="first-screen__image">
         <p class="first-screen__letter">ц</p>
-        <h1>Циолковский−
+        <h1 class="first-screen__heading">Циолковский−
             Космический
             гений
         </h1>
         </div>
       </div>
-      <p class="about__right-line">01</p>
-      <div class="right-line"></div>
+      <div class="right-line">
+        <p class="number">01</p>
+      </div>
       <h2 class="about__heading">Кто же он?</h2>
-      <p class="asterisk">*</p>
-      <p class="about__text">17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже. </p>
+      <h3 class="asterisk">*</h3>
+      <h4 class="about__text">17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже. </h4>
       <div class="about__images">
         <div class="about__image1"></div>
         <div class="about__image2"></div>
@@ -70,36 +71,36 @@
         <p>#HSEADCGANG</p>
       </div>
       <div class="footer__section">
-        <a href="#" class="footer__bio1">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Денис</p>
           <p>Любит ходить к твоей  маме</p>
         </a>
-        <a href="#" class="footer__bio2">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Аня</p>
           <p>Раз, раз, раз — это хардбасс</p>
         </a>
       </div>
       <div class="footer__section">
-        <a href="#" class="footer__bio3">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Валерос</p>
           <p>Спотыкается на ровном месте</p>
         </a>
-        <a href="#" class="footer__bio4">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Катя</p>
           <p>Что-нибудь еще клевое придумайте</p>
         </a>
       </div>
       <div class="footer__section">
-        <a href="#" class="footer__bio5">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Яна</p>
           <p>Разъебёт всех, если надо</p>
         </a>
-        <a href="#" class="footer__bio6">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
           <p>Король мира (может быть, нескольких)</p>
