переделал в мобилке под сетку

--- a/index.html
+++ b/index.html
@@ -69,40 +69,41 @@
         <p>Всегда рады сотрудничеству!</p>
         <p>#HSEADCGANG</p>
       </div>
-      <div class="footer__section">
-        <a href="#" class="footer__bio1">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Денис</p>
           <p>Любит ходить к твоей  маме</p>
+          <div class="footer__bio__socials"></div>
         </a>
-        <a href="#" class="footer__bio2">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Аня</p>
           <p>Раз, раз, раз — это хардбасс</p>
+          <div class="footer__bio__socials"></div>
         </a>
-      </div>
-      <div class="footer__section">
-        <a href="#" class="footer__bio3">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Валерос</p>
           <p>Спотыкается на ровном месте</p>
+          <div class="footer__bio__socials"></div>
         </a>
-        <a href="#" class="footer__bio4">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Катя</p>
           <p>Что-нибудь еще клевое придумайте</p>
+          <div class="footer__bio__socials"></div>
         </a>
-      </div>
-      <div class="footer__section">
-        <a href="#" class="footer__bio5">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Яна</p>
           <p>Разъебёт всех, если надо</p>
+          <div class="footer__bio__socials"></div>
         </a>
-        <a href="#" class="footer__bio6">
+        <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
           <p>Король мира (может быть, нескольких)</p>
+          <div class="footer__bio__socials"></div>
         </a>
     </div>
     <p>made by #HSEADCGANG</p>
