gospodi ya sdelal setku v 768

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
           <p>Король мира (может быть, нескольких)</p>
           <div class="footer__bio__socials"></div>
         </a>
+        <p class="footer__last">made by #HSEADCGANG</p>
     </div>
-    <p>made by #HSEADCGANG</p>
   </footer>
 
 
