--- a/index.html
+++ b/index.html
@@ -74,39 +74,57 @@
           <div class="footer__bio__pic"></div>
           <p>Денис</p>
           <p>Любит ходить к твоей  маме</p>
-          <div class="footer__bio__socials"></div>
+          <div class="footer__bio__socials">
+            <div class="footer__bio__socials__icon"></div>
+            <div class="footer__bio__socials__icon"></div>
+          </div>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Аня</p>
           <p>Раз, раз, раз — это хардбасс</p>
-          <div class="footer__bio__socials"></div>
+          <div class="footer__bio__socials">
+            <div class="footer__bio__socials__icon"></div>
+            <div class="footer__bio__socials__icon"></div>
+          </div>
         </a>
 
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Валерос</p>
           <p>Спотыкается на ровном месте</p>
-          <div class="footer__bio__socials"></div>
+          <div class="footer__bio__socials">
+            <div class="footer__bio__socials__icon"></div>
+            <div class="footer__bio__socials__icon"></div>
+          </div>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Катя</p>
           <p>Что-нибудь еще клевое придумайте</p>
-          <div class="footer__bio__socials"></div>
+          <div class="footer__bio__socials">
+            <div class="footer__bio__socials__icon"></div>
+            <div class="footer__bio__socials__icon"></div>
+          </div>
         </a>
 
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Яна</p>
           <p>Разъебёт всех, если надо</p>
-          <div class="footer__bio__socials"></div>
+          <div class="footer__bio__socials">
+            <div class="footer__bio__socials__icon"></div>
+            <div class="footer__bio__socials__icon"></div>
+          </div>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
           <p>Король мира (может быть, нескольких)</p>
-          <div class="footer__bio__socials"></div>
+          <div class="footer__bio__socials">
+            <div class="footer__bio__socials__icon"></div>
+            <div class="footer__bio__socials__icon"></div>
+          </div>
         </a>
         <p class="footer__last">made by #HSEADCGANG</p>
     </div>
