--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title></title>
+  <title>Циолковский — космический гений</title>
   <link rel="stylesheet" href="styles/layout.css">
   <script src="javascripts/jquery-3.3.1.min.js"></script>
   <script src="javascripts/menu.js"></script>
@@ -34,8 +34,8 @@
       <div class="first-screen">
         <div class="first-screen__image">
         <p class="first-screen__letter">ц</p>
-        <h1 class="first-screen__heading">Циолковский−
-            Космический
+        <h1 class="first-screen__heading">Циолковский —
+            космический
             гений
         </h1>
         </div>
