сделал футер под 1024

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">
     </div>
     <button class="menu__button">&#9776;</button>
-    <button class="cross">&#735;</button>
+    <button class="menu__cross">&#735;</button>
     <div class="menu__classic">
       <a href="#"><li>ОСНОВНОЕ</li></a>
       <a href="#"><li>ЛУЧШЕЕ</li></a>
@@ -120,7 +120,7 @@
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
-          <p>Король мира (может быть, нескольких)</p>
+          <p>Король мира (нескольких)</p>
           <div class="footer__bio__socials">
             <div class="footer__bio__socials__icon"></div>
             <div class="footer__bio__socials__icon"></div>
