--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title></title>
+  <title>EXRVL</title>
   <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
