--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Циолковский — космический гений</title>
   <link rel="stylesheet" href="styles/layout.css">
 
@@ -57,6 +57,7 @@
     </div>
     <section class="distinction">
       <h1>Круче Илона Маска</h1>
+      <image src="images/rocket.png"class="distinction__heading-bg"></image>
       <p>
         Уникальность Циолковского – не только в его колоссальном вкладе в постижение небесного и космического пространств, но и в целом в многогранности его натуры. Циолковский ведь не только формулировал и развивал космонавтику, ракетостроение, воздухоплавание и аэродинамику.
       </p>
@@ -68,7 +69,7 @@
       </p>
     </section>
     <div class="right-line">
-      <p class="number">01</p>
+      <p class="number">02</p>
     </div>
     <section class="works">
         <h2>Лучшие работы</h2>
@@ -92,19 +93,19 @@
       </p>
     </section>
     <div class="right-line">
-      <p class="number">01</p>
+      <p class="number">03</p>
     </div>
     <section class="quotes">
       <div class="quotes__heading">
-        <h1><span>«Земля есть колыбель разума,</span>но нельзя вечно жить в колыбели»</h1>
+        <h1><span>«Земля есть колыбель разума,</span> но нельзя вечно жить в колыбели»</h1>
       </div>
       <h1 class="quotes__background-symbol">”</h1>
     </section>
     <div class="right-line">
-      <p class="number">01</p>
+      <p class="number">04</p>
     </div>
     <section class="more-info">
-    <h1>Лучшие работы</h1>
+    <h2>Узнайте больше</h2>
     <div class="more-info__items">
       <div class="more-info__items__base">
         <h2><a href="#">“Космический пророк”</a></h2>
