убрал мусор, кучу мусора

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="first-screen">
         <div class="first-screen__image">
         <p class="first-screen__letter">ц</p>
-        <h1 class="first-screen__heading">Циолковский —
+        <h1 class="first-screen__heading">Циолковский —<br>
             космический
             гений
         </h1>
@@ -97,7 +97,7 @@
     </div>
     <section class="quotes">
       <div class="quotes__heading">
-        <h1><span>«Земля есть колыбель разума,</span> но нельзя вечно жить в колыбели»</h1>
+        <h1><span>«Земля есть колыбель разума,</span><br>но нельзя же вечно жить в колыбели»</h1>
       </div>
       <h1 class="quotes__background-symbol">”</h1>
     </section>
@@ -107,18 +107,18 @@
     <section class="more-info">
     <h2>Узнайте больше</h2>
     <div class="more-info__items">
-      <div class="more-info__items__base">
+      <div class="more-info__items__base base-1">
         <h2><a href="#">“Космический пророк”</a></h2>
-        <h3>Полная биография Циолковского</h3>
+        <h3>Документальный фильм</h3>
         <p>Видео на YouTube</p>
     </div>
-      <div class="more-info__items__base">
-        <h2><a href="#">“Космический пророк”</a></h2>
-        <h3>Полная биография Циолковского</h3>
+      <div class="more-info__items__base base-2">
+        <h2><a href="#">“Благодарность”</a></h2>
+        <h3>Космическая философия</h3>
         <p>Книга</p>
     </div>
-      <div class="more-info__items__base">
-        <h2><a href="#">“Космический пророк”</a></h2>
+      <div class="more-info__items__base base-3">
+        <h2><a href="#">“Семья”</a></h2>
         <h3>Полная биография Циолковского</h3>
         <p>Статья</p>
       </div>
