подправил медиа на 768

--- a/index.html
+++ b/index.html
@@ -39,25 +39,32 @@
         </h1>
         </div>
       </div>
-    <div class="right-line">
-      <p class="number">01</p>
-    </div>
-    <div class="about_content">
-        <h2 class="about__heading">Кто же он?</h2>
-
-      <p>17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже. </p>
-      <div class="about__images">
-        <div class="about__image1"></div>
-        <div class="about__image2"></div>
+      <div class="right-line">
+        <p class="number">01</p>
       </div>
-    </div>
+      <div class="about__content">
+        <div class="about__content__paragraph">
+          <h2 class="about__heading">Кто же он?</h2>
+          <p>17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже.
+          17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже.  </p>
+          <p>17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже.
+          17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже.  </p>
+          <p>17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже.
+          17 сентября 1857 года, ровно 160 лет назад, родился Константин Эдуардович Циолковский – гениальный русский ученый, человек, стоявший у истоков теоретической космонавтики. «Русские в космосе» - это результат и всей его жизни тоже.  </p>
+        </div>
+        <div class="about__images">
+          <div class="about__image1"></div>
+          <div class="about__image2"></div>
+        </div>
+      </div>
+
     </section>
     <div class="right-line">
       <p class="number">01</p>
     </div>
     <section class="distinction">
       <h1>Круче Илона Маска</h1>
-      <image src="images/rocket.png"class="distinction__heading-bg"></image>
+      <image src= "images/rocket.png" class = "distinction__heading-bg"></image>
       <p>
         Уникальность Циолковского – не только в его колоссальном вкладе в постижение небесного и космического пространств, но и в целом в многогранности его натуры. Циолковский ведь не только формулировал и развивал космонавтику, ракетостроение, воздухоплавание и аэродинамику.
       </p>
@@ -72,20 +79,23 @@
       <p class="number">02</p>
     </div>
     <section class="works">
-        <h2>Лучшие работы</h2>
-      <img src="images/poster.jpg" alt="book">
-      <h3>”Вне земли”</h3>
-      <div class="works__info-items">
-        <div class="works__info-items__item">
-          <div class="works__info-items__item__types">
-            <h3><span>Год издания<br></span>2013<span><span>тыс.</span></h3>
-          </div>
+      <h2>Лучшие работы</h2>
+      <div class="works__content">
+        <div class="works__content__poster">
+          <img src="images/poster.jpg" alt="book">
+          <h3>”Вне земли”</h3>
         </div>
-        <div class="works__info-items__item">
-          <div class="works__info-items__item__types">
-            <h3><span>Читателей<br></span>298 <span>чел.</span></h3>
+        <div class="works__info-items">
+          <div class="works__info-items__item">
+            <div class="works__info-items__item__types">
+              <h3><span>Год издания<br></span>2013<span><span>г.</span></h3>
+            </div>
           </div>
-
+          <div class="works__info-items__item">
+            <div class="works__info-items__item__types">
+              <h3><span>Читателей<br></span>298 <span>тыс. чел.</span></h3>
+            </div>
+          </div>
         </div>
       </div>
       <p>
