--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <main>
     <div class="menu__hamburger">
       <ul>
-        <a href="#"><li>ОСНОВНОЕ</li></a>
-        <a href="#"><li>ЛУЧШЕЕ</li></a>
-        <a href="#"><li>О ЧЕЛОВЕКЕ</li></a>
-        <a href="#"><li>ХОЧУ БОЛЬШЕ</li></a>
+        <a href="#"><li>Описание</li></a>
+        <a href="#"><li>Особенности</li></a>
+        <a href="#"><li>Работы</li></a>
+        <a href="#"><li>Интересно</li></a>
       </ul>
     </div>
     <section class="about">
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="right-line">
-        <p class="number">01</p>
+        <span class="number">01</span>
       </div>
       <div class="about__content">
         <div class="about__content__paragraph">
@@ -60,7 +60,7 @@
 
     </section>
     <div class="right-line">
-      <p class="number">01</p>
+      <span class="number">02</span>
     </div>
     <section class="distinction">
       <h1>Круче Илона Маска</h1>
@@ -76,34 +76,40 @@
       </p>
     </section>
     <div class="right-line">
-      <p class="number">02</p>
+      <span class="number">03</span>
     </div>
     <section class="works">
       <h2>Лучшие работы</h2>
       <div class="works__content">
-        <div class="works__content__poster">
-          <img src="images/poster.jpg" alt="book">
-          <h3>”Вне земли”</h3>
-        </div>
+        <img src="images/poster.jpg" alt="book">
+
         <div class="works__info-items">
+          <h3>”Вне земли”</h3>
           <div class="works__info-items__item">
             <div class="works__info-items__item__types">
-              <h3><span>Год издания<br></span>2013<span><span>г.</span></h3>
+              <span class="works__info-items__item__types__descriptor">2013 <span>г.</span></span>
+              <p>Год издания</p>
             </div>
-          </div>
-          <div class="works__info-items__item">
             <div class="works__info-items__item__types">
-              <h3><span>Читателей<br></span>298 <span>тыс. чел.</span></h3>
+              <span class="works__info-items__item__types__descriptor">295 <span>тыс.</span></span>
+              <p>Читателей</p>
             </div>
           </div>
+          <p>
+            Он был философом и писателем, одним из ярчайших представителей русского космизма и автором целого ряда произведений на стыке науки и фантастической литературы, в которых он призывал к освоению и заселению космического пространства.
+          </p>
+          <p class="hidden">
+            Он был философом и писателем, одним из ярчайших представителей русского космизма и автором целого ряда произведений на стыке науки и фантастической литературы, в которых он призывал к освоению и заселению космического пространства.
+          </p>
+          <p class="hidden">
+            Он был философом и писателем, одним из ярчайших представителей русского космизма и автором целого ряда произведений на стыке науки и фантастической литературы, в которых он призывал к освоению и заселению космического пространства.
+          </p>
         </div>
       </div>
-      <p>
-        Он был философом и писателем, одним из ярчайших представителей русского космизма и автором целого ряда произведений на стыке науки и фантастической литературы, в которых он призывал к освоению и заселению космического пространства.
-      </p>
+
     </section>
     <div class="right-line">
-      <p class="number">03</p>
+      <span class="number">04</span>
     </div>
     <section class="quotes">
       <div class="quotes__heading">
@@ -112,25 +118,25 @@
       <h1 class="quotes__background-symbol">”</h1>
     </section>
     <div class="right-line">
-      <p class="number">04</p>
+      <span class="number">05</span>
     </div>
     <section class="more-info">
     <h2>Узнайте больше</h2>
     <div class="more-info__items">
       <div class="more-info__items__base base-1">
-        <h2><a href="#">“Космический пророк”</a></h2>
-        <h3>Документальный фильм</h3>
-        <p>Видео на YouTube</p>
-    </div>
+        <h3><a href="#">«Космический пророк»</a></h3>
+        <h4>Документальный фильм</h4>
+        <a href="#">Видео на YouTube</a>
+      </div>
       <div class="more-info__items__base base-2">
-        <h2><a href="#">“Благодарность”</a></h2>
-        <h3>Космическая философия</h3>
-        <p>Книга</p>
-    </div>
+        <h3><a href="#">«Благодарность»</a></h3>
+        <h4>Космическая философия</h4>
+        <a href="#">Книга</a>
+      </div>
       <div class="more-info__items__base base-3">
-        <h2><a href="#">“Семья”</a></h2>
-        <h3>Полная биография Циолковского</h3>
-        <p>Статья</p>
+        <h3><a href="#">«Семья»</a></h3>
+        <h4>Полная биография Циолковского</h4>
+        <a href="#">Статья</a>
       </div>
     </div>
     </section>
@@ -145,57 +151,33 @@
           <div class="footer__bio__pic"></div>
           <p>Денис</p>
           <p>Любит ходить к твоей  маме</p>
-          <div class="footer__bio__socials">
-            <div class="footer__bio__socials__icon"></div>
-            <div class="footer__bio__socials__icon"></div>
-          </div>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Аня</p>
           <p>Раз, раз, раз — это хардбасс</p>
-          <div class="footer__bio__socials">
-            <div class="footer__bio__socials__icon"></div>
-            <div class="footer__bio__socials__icon"></div>
-          </div>
         </a>
 
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Валерос</p>
           <p>Спотыкается на ровном месте</p>
-          <div class="footer__bio__socials">
-            <div class="footer__bio__socials__icon"></div>
-            <div class="footer__bio__socials__icon"></div>
-          </div>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Катя</p>
-          <p>Что-нибудь еще клевое придумайте</p>
-          <div class="footer__bio__socials">
-            <div class="footer__bio__socials__icon"></div>
-            <div class="footer__bio__socials__icon"></div>
-          </div>
+          <p>Что-нибудь клевое</p>
         </a>
 
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Яна</p>
           <p>Разъебёт всех, если надо</p>
-          <div class="footer__bio__socials">
-            <div class="footer__bio__socials__icon"></div>
-            <div class="footer__bio__socials__icon"></div>
-          </div>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Рома</p>
           <p>Король мира (нескольких)</p>
-          <div class="footer__bio__socials">
-            <div class="footer__bio__socials__icon"></div>
-            <div class="footer__bio__socials__icon"></div>
-          </div>
         </a>
         <p class="footer__last">made by #HSEADCGANG</p>
     </div>
