some text changes

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Денис</p>
-          <p>Любит ходить к твоей  маме</p>
+          <p>Любит всех мам на свете</p>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
@@ -198,7 +198,7 @@
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
           <p>Яна</p>
-          <p>Разъебёт всех, если надо</p>
+          <p>Любит динозавров</p>
         </a>
         <a href="#" class="footer__bio">
           <div class="footer__bio__pic"></div>
